# bark

./: Cargo.toml  README.md
src/: cli.rs  main.rs  util.rs
src/commands/: init.rs  mod.rs  new.rs  run.rs
