[package]
name = "bark"
version = "0.1.0"
authors = ["chamilto <Corey.Hamilton@inmar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
sqlite = "0.25.0"
dirs = "2.0.2"
rust-ini = "0.15"
serde_json = "1.0.48"
reqwest = { version = "0.10.1", features = ["json", "blocking"]}
